# rqanda

./: .env.dev  .gitignore  Cargo.toml  README.md  docker-compose.yml  questions.json
config/db/: .env.dev
migrations/: 20231120191841_questions_table.up.sql  20231120192811_answers_table.up.sql
src/: error.rs  main.rs  store.rs
src/routes/: answer.rs  question.rs
src/types/: answer.rs  pagination.rs  question.rs
