[package]
name = "rqanda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32", features = ["full"] }
warp = "0.3.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.5", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = {version = "0.7", features = ["runtime-tokio-rustls", "migrate", "postgres"]}
dotenv = "0.15.0"
reqwest = {version = "0.11.22", features = ["json"]}
lazy_static = "1.4.0"